# eut_scene_msgs

./: CMakeLists.txt  README.md  package.xml
action/: TipsObjectQuery.action
msg/: SceneEntity.msg  SceneEntityArray.msg  TipsEmbedding.msg  TipsEmbeddingArray.msg  TipsObjectIdentity.msg  TipsObjectIdentityArray.msg  TipsObjectQueryMatch.msg  TipsPatchMatch.msg  TipsPatchMatchArray.msg  ToolKeypoint.msg  ToolKeypointArray.msg  ToolPose6D.msg  ToolPose6DArray.msg
