<?xml version="1.0"?>
<package format="3">
  <name>eut_scene_msgs</name>
  <version>0.0.1</version>
  <description>Scene understanding messages for Eurecat perception stack</description>
  <maintainer email="robotics@eurecat.org">Eurecat Robotics</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>hri_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>action_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
